--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   <a href="#">Download Excursion (Coming soon!)</a>
   <p><video src="./resources/videos/excursion.mov" type="video/mov" autoplay></video></p>
   <h2>Your personal travel guide</h2>
-  <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
   <p><img src="./resources/images/camp.jpg" alt=""></p>
   <p><img src="./resources/images/phone.png" alt=""></p>
 
-    <h2>Coming Soon for iPhone and Android</h2>
+  <h2>Coming Soon for iPhone and Android</h2>
   <a href="#">Download Excursion (Coming soon!)</a>
+  <footer>@ Excursion</footer>
 </body>
 </html>
